# Environmental-Monitoring

./: CMakeLists.txt  README.md  TCPServer.cpp  TCPServer.h  TCPServerV6.cpp  TCPServerV6.h  UDPServer.cpp  UDPServer.h  client.cpp  server.cpp  servermain.cpp  tcpclient.cpp
JavaClient/src/: Client.java  ClientService.java  EnvironmentData.java  IEnvService.java  MainTest.java  Server.java
JavaClient/src/rmi/: DateClient.java  EnvDataManClient.java  EnvDataManServer.java  IEnvService.java  IRemoteDate.java
JavaClient/src/tcp/: Client.java  MainTest.java  Server.java
RMI/src/rmi/: DateServer.java  EnvDataManClient.java  EnvDataManServer.java  EnvironmentData.java  IEnvService.java  ServiceMgmt.java
ServerAndClientTemplates/: TCPServer.cpp  TCPServer.h  TCPServerV6.cpp  TCPServerV6.h  servermain.cpp  tcpv6client.cpp  udpclient.cpp
Servlet/WebContent/: Environment.war  HelloWorld.war  InfoServlet.war  SessionServlet.war
Servlet/WebContent/WEB-INF/: Environment.war
Servlet/src/servlet/: EnvironmentServiceServlet.java  HelloWorldServlet.java  InfoServlet.java  SessionServlet.java
TCPClient/src/tcp/: ClientService.java  EnvironmentData.java  IEnvService.java  MainTest.java
WebService/src/: MainTest.java  MyHandler.java  UsingString.java  Wind.java
